[tool.poetry]
name = "datatracker"
version = "0.1.0"
description = ""
authors = ["JC Coto <jc@fractalreef.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
Hypercorn = "^0.11.2"
SQLAlchemy = "^1.4.22"
aioredis = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
